# churn_prediction

./: .gitignore  .python-version  Makefile  README.md  TASK.md  churn_prediction.ipynb  data_description.txt  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
configs/: config.yaml
docker/: Dockerfile  docker-compose.yml
pipelines/: inference_pipeline.py  train_pipeline.py
src/: __init__.py  config.py
src/data/: loader.py  preprocessor.py
src/features/: __init__.py  engineer.py  schema.py  store.py
src/serving/: app.py
tests/: conftest.py  test_features.py  test_model.py  test_preprocessor.py
