[project]
name = "churn-prediction"
version = "0.1.0"
description = "Production-grade customer churn prediction MLOps platform"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "pipelines", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
